--- a/mailstats.tmpl
+++ b/mailstats.tmpl
@@ -1,11 +1,48 @@
 <!DOCTYPE html> <html>
-<head><title>Mailstats -<TMPL_VAR NAME=TODAYDATE></title>
+<head>
+	<meta charset="utf-8">
+	<title>Mailstats -<TMPL_VAR NAME=TODAYDATE></title>
 	<link rel='stylesheet' type='text/css' href='mailstats.css?aaa' />
+	<script>
+	function LinkCheck(url){
+		var http = new XMLHttpRequest();
+		http.open('HEAD', url, false);
+		http.send();
+		return http.status!=404;
+    }
+	
+	function doNavs() {
+		var aTags = document.getElementsByTagName('a'),
+			atl = aTags.length,
+			i;
+
+		for (i = 0; i < atl; i++) {
+			if (aTags[i].innerText == "Previous") {
+				if (!LinkCheck(aTags[i].href)) { 
+					aTags[i].style.visibility = "hidden";
+				} else {
+					aTags[i].style.visibility = "visible";
+				}
+			} else if (aTags[i].innerText == "Next") {
+				if (!LinkCheck(aTags[i].href)) { 
+					aTags[i].style.visibility = "hidden";
+				} else {
+					aTags[i].style.visibility = "visible";
+				}
+			}
+		}
+	}
+	</script>
 </head>
 <body>
-<p><a href="http://<TMPL_VAR NAME=DOMAIN>/mailstats/mailstats.html">See in browser</a></p>
-<h1><a name="section_1">SMEServer daily email statistics from <TMPL_VAR NAME=HOSTNAME> - <TMPL_VAR NAME=TODAYDATE></a></h1>
-<p><!---<TMPL_VAR NAME=VERSION><br />--->
+
+<div class="linksattop">
+<a class="prevlink" href="http://<TMPL_VAR NAME=DOMAIN>/mailstats/mailstats<TMPL_VAR NAME=YESTERDAYDATE>.html">Previous</a>
+<div class="divseeinbrowser"><a class="seeinbrowser" href="http://<TMPL_VAR NAME=DOMAIN>/mailstats/mailstats<TMPL_VAR NAME=TODAYDATE>.html">See in browser</a></div>
+<a class="nextlink" href="http://<TMPL_VAR NAME=DOMAIN>/mailstats/mailstats<TMPL_VAR NAME=TOMORROWDATE>.html">Next</a>
+</div>
+<h1><a>SMEServer daily email statistics from <TMPL_VAR NAME=HOSTNAME> - <TMPL_VAR NAME=TODAYDATE></a></h1>
+<p><!--<TMPL_VAR NAME=VERSION><br />-->
 <TMPL_LOOP NAME=TOPBIT>
   <TMPL_VAR NAME=f1><br />
 </TMPL_LOOP>
@@ -13,15 +50,15 @@
 
 
 <table class="stats-table">
-<caption><h2><a name="section_2"><TMPL_VAR NAME=STATS_CAPTION></a></h2></caption>
+<caption><h2><a><TMPL_VAR NAME=STATS_CAPTION></a></h2></caption>
 <TMPL_LOOP NAME=STATS_TABLE>
-  <TMPL_IF NAME=__first__>
+	<TMPL_IF NAME=__first__>
 		<tr class='stats-head'>
 		<TMPL_LOOP NAME=cols>
 				<th><TMPL_VAR NAME=col></th>
-    </TMPL_LOOP>
-    </tr>
-  <TMPL_ELSE>
+		</TMPL_LOOP>
+		</tr>
+	<TMPL_ELSE>
 		<TMPL_IF NAME="__last__">
 			<tr class='stats-foot'>
 			<TMPL_LOOP NAME=cols>
@@ -45,7 +82,6 @@
 			</TMPL_LOOP>			
 			</tr>
 		</TMPL_IF>
-		</tr>
 	</TMPL_IF>
 </TMPL_LOOP>
 </table>
@@ -56,34 +92,42 @@
 </TMPL_LOOP>
 </p>
 
-<table class="recip-table"><thead>
-<caption><h2><a name="section_3"><TMPL_VAR NAME=RECIP_CAPTION></a></h2></caption>
+<TMPL_IF NAME="RECIP_CAPTION">
+<table class="recip-table">
+<caption><h2><a><TMPL_VAR NAME=RECIP_CAPTION></a></h2></caption>
+<thead>
 <TMPL_LOOP NAME=RECIP_TABLE>
+	<TMPL_IF NAME=__first__>
 	<tr>
-  <TMPL_IF NAME=__first__>
-    <TMPL_LOOP NAME=cols>
-				<th><TMPL_VAR NAME=col></th>
-    </TMPL_LOOP>
+		<TMPL_LOOP NAME=cols>
+			<th><TMPL_VAR NAME=col></th>
+		</TMPL_LOOP>
     </tr>
-    </thead><tbody>
-  <TMPL_ELSE>
+    </thead>
+	<tbody>
+	<TMPL_ELSE>
 		<TMPL_IF NAME="__last__">
 			</tbody><tfoot>
+		<tr>
 			<TMPL_LOOP NAME=cols>
-					<td><TMPL_VAR NAME=col></td>
+				<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>
 		<TMPL_ELSE>
+		<tr>
+
 			<TMPL_LOOP NAME=cols>
 					<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>			
 		</TMPL_IF>
+	</tr>
 	</TMPL_IF>
-			</tr>
 </TMPL_LOOP>
 </tfoot></table>
+</TMPL_IF>
 
-<table class="virus-table"><thead>
-<caption><h2><a name="section_4"><TMPL_VAR NAME=VIRUS_CAPTION></a></h2></caption></thead>
+<TMPL_IF NAME="VIRUS_CAPTION">
+<table class="virus-table">
+<caption><h2><a><TMPL_VAR NAME=VIRUS_CAPTION></a></h2></caption>
 <tbody>
 <TMPL_LOOP NAME=VIRUS_TABLE>
 	<tr>
@@ -98,38 +142,46 @@
 </TMPL_LOOP>
 </tbody>
 </table>
+</TMPL_IF>
 
-<table class="qpsmtpd-table"><thead>
-<caption><h2><a name="section_4"><TMPL_VAR NAME=QPSMTPD_CAPTION></a></h2></caption>
+<TMPL_IF NAME="QPSMTPD_CAPTION">
+<table class="qpsmtpd-table">
+<caption><h2><a><TMPL_VAR NAME=QPSMTPD_CAPTION></a></h2></caption>
+<thead>
 <TMPL_LOOP NAME=QPSMTPD_TABLE>
-	<tr>
   <TMPL_IF NAME=__first__>
+	<tr>
     <TMPL_LOOP NAME=cols>
 				<th><TMPL_VAR NAME=col></th>
     </TMPL_LOOP>
     </tr>
-    </thead><tbody>
+	</thead><tbody>
   <TMPL_ELSE>
 		<TMPL_IF NAME="__last__">
 			</tbody><tfoot>
+			<tr>
 			<TMPL_LOOP NAME=cols>
 					<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>
 		<TMPL_ELSE>
+			<tr>
 			<TMPL_LOOP NAME=cols>
 					<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>			
 		</TMPL_IF>
-		</tr>
+	</tr>
 	</TMPL_IF>
 </TMPL_LOOP>
 </tfoot></table>
+</TMPL_IF>
 
-<table class="geoip-table"><thead>
-<caption><h2><a name="section_5"><TMPL_VAR NAME=GEOIP_CAPTION></a></h2></caption>
+<TMPL_IF NAME="GEOIP_CAPTION">
+<table class="geoip-table">
+<caption><h2><a><TMPL_VAR NAME=GEOIP_CAPTION></a></h2></caption>
+<thead>
 <TMPL_LOOP NAME=GEOIP_TABLE>
-	<tr>
   <TMPL_IF NAME=__first__>
+	<tr>
     <TMPL_LOOP NAME=cols>
 				<th><TMPL_VAR NAME=col></th>
     </TMPL_LOOP>
@@ -138,10 +190,12 @@
   <TMPL_ELSE>
 		<TMPL_IF NAME="__last__">
 			</tbody><tfoot>
+			<tr>
 			<TMPL_LOOP NAME=cols>
 					<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>
 		<TMPL_ELSE>
+			<tr>
 			<TMPL_LOOP NAME=cols>
 					<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>			
@@ -150,12 +204,15 @@
 	</TMPL_IF>
 </TMPL_LOOP>
 </tfoot></table>
+</TMPL_IF>
 
-<table class="junkmail-table"><thead>
-<caption><h2><a name="section_6"><TMPL_VAR NAME=JUNKMAIL_CAPTION></a></h2></caption>
+<TMPL_IF NAME="JUNKMAIL_CAPTION">
+<table class="junkmail-table">
+<caption><h2><a><TMPL_VAR NAME=JUNKMAIL_CAPTION></a></h2></caption>
+<thead>
 <TMPL_LOOP NAME=JUNKMAIL_TABLE>
-	<tr>
   <TMPL_IF NAME=__first__>
+	<tr>
     <TMPL_LOOP NAME=cols>
 				<th><TMPL_VAR NAME=col></th>
     </TMPL_LOOP>
@@ -164,30 +221,36 @@
   <TMPL_ELSE>
 		<TMPL_IF NAME="__last__">
 			</tbody><tfoot>
+			<tr>
 			<TMPL_LOOP NAME=cols>
 					<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>
 		<TMPL_ELSE>
+			<tr>
 			<TMPL_LOOP NAME=cols>
 					<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>			
 		</TMPL_IF>
-		</tr>
+	</tr>
 	</TMPL_IF>
 </TMPL_LOOP>
 </tfoot></table>
+</TMPL_IF>
 
-<table class="blacklistsettings-table"><thead>
-<caption><h2><a name="section_7"><TMPL_VAR NAME=BLACKLISTsettings_CAPTION></a></h2></caption>
+<TMPL_IF NAME="BLACKLISTSETTINGS_CAPTION">
+<table class="blacklistsettings-table">
+<caption><h2><a><TMPL_VAR NAME=BLACKLISTsettings_CAPTION></a></h2></caption>
+<tbody>
 <TMPL_LOOP NAME=BLACKLISTSETTINGS_TABLE>
-	<tr>
-  <TMPL_IF NAME="__last__">
+ <TMPL_IF NAME="__last__">
 			</tbody><tfoot>
-			<TMPL_LOOP NAME=cols>
+	<tr>
+ 			<TMPL_LOOP NAME=cols>
 					<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>
 	<TMPL_ELSE>
-		<TMPL_LOOP NAME=cols>
+	<tr>
+ 		<TMPL_LOOP NAME=cols>
 			<td><TMPL_VAR NAME=col></td>
 		</TMPL_LOOP>			
 	</TMPL_IF>
@@ -195,12 +258,12 @@
 </TMPL_LOOP>
 </tfoot></table>
 
-
-<table class="blacklistuse-table"><thead>
-<caption><h2><a name="section_7"><TMPL_VAR NAME=BLACKLISTUSE_CAPTION></a></h2></caption>
+<table class="blacklistuse-table">
+<caption><h2><a><TMPL_VAR NAME=BLACKLISTUSE_CAPTION></a></h2></caption>
+<thead>
 <TMPL_LOOP NAME=BLACKLISTUSE_TABLE>
-	<tr>
   <TMPL_IF NAME=__first__>
+	<tr>
     <TMPL_LOOP NAME=cols>
 				<th><TMPL_VAR NAME=col></th>
     </TMPL_LOOP>
@@ -209,10 +272,12 @@
   <TMPL_ELSE>
 		<TMPL_IF NAME="__last__">
 			</tbody><tfoot>
+			<tr>
 			<TMPL_LOOP NAME=cols>
 					<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>
 		<TMPL_ELSE>
+			<tr>
 			<TMPL_LOOP NAME=cols>
 					<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>			
@@ -221,12 +286,15 @@
 	</TMPL_IF>
 </TMPL_LOOP>
 </tfoot></table>
+</TMPL_IF>
 
-<table class="emails-table"><thead>
-<caption><h2><a name="section_9"><TMPL_VAR NAME=EMAILS_CAPTION></a></h2></caption>
+<TMPL_IF NAME="EMAILS_CAPTION">
+<table class="emails-table">
+<caption><h2><a><TMPL_VAR NAME=EMAILS_CAPTION></a></h2></caption>
+<thead>
 <TMPL_LOOP NAME=EMAILS_TABLE>
-	<tr>
   <TMPL_IF NAME=__first__>
+	<tr>
     <TMPL_LOOP NAME=cols>
 				<th><TMPL_VAR NAME=col></th>
     </TMPL_LOOP>
@@ -235,10 +303,12 @@
   <TMPL_ELSE>
 		<TMPL_IF NAME="__last__">
 			</tbody><tfoot>
+			<tr>
 			<TMPL_LOOP NAME=cols>
 					<td><TMPL_VAR NAME=col></td>
 			</TMPL_LOOP>
 		<TMPL_ELSE>
+			<tr>
 			<TMPL_LOOP NAME=cols>
 					<TMPL_IF NAME="__last__">
 						<td><a href="mailto:<TMPL_VAR NAME=col>"><TMPL_VAR NAME=col></a></td>
@@ -251,6 +321,23 @@
 	</TMPL_IF>
 </TMPL_LOOP>
 </tfoot></table>
+</TMPL_IF>
 
 <footer><p><TMPL_VAR NAME=BOTTOMBIT></p></footer>
+<script>window.onload = function(){doNavs();} </script> 
+<p class="cssvalid">
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+</p>
+
+<p class="htmlvalid">
+      <a href="https://validator.w3.org/check?uri=referer"><img
+          src="http://www.w3.org/Icons/valid-xhtml10"
+          alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+</p>
+  
+
 </body></html>
