Update 26th Dec 2017
Sort out log record selection
Make html standards compliant

--- a/mailstats-detail-header.tmpl
+++ b/mailstats-detail-header.tmpl
@@ -1,10 +1,11 @@
 <!DOCTYPE html> <html>
 	<head>
-	<title>MailStats details page</title>
-	<link rel='stylesheet' type='text/css' href='mailstats.css?aaa' />
+		<meta charset="utf-8">
+		<title>MailStats details page</title>
+		<link rel='stylesheet' type='text/css' href='mailstats.css?aaa' />
 	</head>
 	<body>
-	<h1>Details from Mailstats  - @serveranddate@</h1>
-	<h2>Interval:@hour@ and category:@categ@</h2>
-	<table class='mailstats-detail'>
-	<tr><th>Date</th><th>Contents</th></tr>
+		<h1>Details from Mailstats  - @serveranddate@</h1>
+		<h2>Interval:@hour@ and category:@categ@</h2>
+		<table class='mailstats-detail'>
+		<tr><th>Date</th><th>Contents</th></tr>
