--- a/mailstats-detail-table.tmpl
+++ b/mailstats-detail-table.tmpl
@@ -1,1 +1,1 @@
-<tr><td class='mailstats-detail-1stcol'>@when@</td><td>@contents@</td></tr>
+<tr class='@cssclass@'><td class='mailstats-detail-1stcol'>@when@</td><td class='mailstats-detail-2ndcol'>@contents@</td></tr>
