--- a/mailstats-detail-footer.tmpl
+++ b/mailstats-detail-footer.tmpl
@@ -1,3 +1,17 @@
 </table>
-<footer><p>@counts@ generated in @secs@ second(s) on @now@ </p></footer>
+<footer><p>@counts@ generated in @secs@ second(s) on @now@ </p>
+	<p class="cssvalid">
+		<a href="http://jigsaw.w3.org/css-validator/check/referer">
+			<img style="border:0;width:88px;height:31px"
+				src="http://jigsaw.w3.org/css-validator/images/vcss"
+				alt="Valid CSS!" />
+		</a>
+	</p>
+
+	<p class="htmlvalid">
+		  <a href="https://validator.w3.org/check?uri=referer"><img
+			  src="http://www.w3.org/Icons/valid-xhtml10"
+			  alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+	</p>
+</footer>
 </body></html>
